[package]
name = "tg-300"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
select = "0.6.0"
teloxide = { version = "0.12", features = ["macros", "sqlite-storage", "bincode-serializer"] }
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
